test-app/prd/prd-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: prd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          volumeMounts:
            - name: nginx-index-prd
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: nginx-index-prd
          configMap:
            name: nginx-index-prd
