test-app/prd/prd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-prd
  namespace: prd
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
